# sei-project4

back-end/: pyproject.toml
back-end/cart/: models.py  permissions.py  seeds.json  serializers.py  urls.py  views.py
back-end/cart/migrations/: 0001_initial.py  0002_auto_20211202_2256.py  0003_alter_cart_order_items.py  0004_alter_cart_order_items.py  0005_alter_cart_order_items.py
back-end/jwt_auth/: authentication.py  seeds.json  serializers.py  urls.py  views.py
back-end/payments/: urls.py  views.py
back-end/products/: models.py  seeds.json  serializers.py  urls.py  views.py
back-end/products/migrations/: 0001_initial.py  0002_auto_20211202_2201.py  0003_alter_product_name.py  0004_auto_20211206_1626.py  0005_auto_20211210_1055.py
back-end/reviews/: models.py  permissions.py  seeds.json  urls.py  views.py
back-end/reviews/migrations/: 0001_initial.py  0002_alter_review_owner.py  0003_rename_owner_review_user.py
back-end/store/: settings.py  urls.py
front-end/: package.json
front-end/src/: App.js  api.js  index.js  setupProxy.js
front-end/src/assets/: stripe.css
front-end/src/components/: Carousel.js  Cart.js  Checkout.js  CheckoutForm.js  Footer.js  Home.js  Login.js  NavBar.js  PaySuccess.js  ProductDetail.js  Register.js  Showcase.js
front-end/src/components/helpers/: auth.js
front-end/src/lib/: headers.js
front-end/src/styles/: main.css
